# cvprlab

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
cvprlab_matlab/classify/: testsvm.m
cvprlab_matlab/mvg/: EpipolarConstraint.m  EstimateF_8PointAlgorithm.m  InteractiveEpipolarConstraint.m  Pick8Points.m  calchomography.m  drawCamera3D.m  drawRay.m  getLightRay.m  homogeneousline.m  homoginteractive.m  intersectRays.m  loadCamera.m  loadViewpoint.m  studio.m  testhomog.m  triangulate.m
cvprlab_matlab/shape/: BuildConfusionMatrix.asv  CaptureShapeExamples.asv  CaptureShapeExamples.m  CentralMoment.asv  CentralMoment.m  Chaincode.asv  Chaincode.m  ChaincodeRasterize.asv  ChaincodeRasterize.m  ComputeFD.asv  ComputeFD.m  ComputeFDAngular.m  DrawShape.asv  DrawShape.m  FourierDescriptorDemo.asv  FourierDescriptorDemo.m  HuMoments.asv  HuMoments.m  RemoveSpurs.asv  RemoveSpurs.m  SamplePolygonPerimeter.asv  SamplePolygonPerimeter.m  ShapeDemo.asv  ShapeDemoBatch.asv  ShapeDemoBatch.m  ShapeDemoDoPCA.asv  ShapeDemoInteractive.asv  ShapeDemoInteractive.m
cvprlab_matlab/sift/: sift_compile.m
cvprlab_matlab/snakes/: .snkfit.c.swp  dan_snkfit.c  old_scancr.c  old_snkfit.c  pictNorm.m  scancr.c  scancr.mexa64  snkfit.c  snkfit.mexa64  splinedemo.m
cvprlab_matlab/util/: rgb2gray.m
cvprlab_matlab/vishull/: vishulldemo.m
cvprlab_python/: l1_image_processing.ipynb
cvprlab_python/lab1/: l1_image_processing.ipynb
cvprlab_python/lab10/: README.md  camera.py  main.py  requirements.txt
cvprlab_python/lab2/: l2_pca.ipynb
(+56 files in other folders)
