[tool.poetry]
name = "cvprlab-python"
version = "0.1.0"
description = "CVPR labs in Python"
authors = ["frankcholula <lu.phrank@gmail.com>"]
readme = "README.md"
packages = [{include = "cvprlab_python"}]

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"
numpy = "^2.1.1"
streamlit = "^1.39.0"
opencv-python-headless = "^4.10.0.84"
firebase-admin = "^6.5.0"
scikit-image = "^0.24.0"
pillow = "^11.0.0"
scikit-learn = "^1.5.2"
opencv-python = "^4.10.0.84"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.5"
watchdog = "^5.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
